--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "webpack-docs-demo",
-    "version": "1.2.7",
+    "version": "1.2.8",
     "description": "Webpack Learning",
     "main": "index.html, main.js",
     "scripts": {
@@ -22,8 +22,10 @@
         "instantsearch.css": "^7.4.2",
         "instantsearch.js": "^4.3.1",
         "jquery": "^3.4.1",
+        "node-sass": "^4.13.1",
         "raw-loader": "^4.0.0",
         "react-dom": "^16.13.1",
+        "sass-loader": "^8.0.2",
         "style-loader": "^1.1.3",
         "uglifyjs-webpack-plugin": "^2.2.0",
         "url-loader": "^4.0.0",
