--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "webpack-docs-demo",
-    "version": "1.2.9",
+    "version": "1.3.2",
     "description": "Webpack Learning",
     "main": "index.html, main.js",
     "scripts": {
@@ -13,9 +13,11 @@
         "@babel/core": "^7.9.0",
         "@babel/preset-env": "^7.9.0",
         "@babel/preset-react": "^7.9.4",
+        "@fortawesome/fontawesome-free": "^5.13.0",
         "algoliasearch": "^4.1.0",
         "babel-loader": "^8.1.0",
         "css-loader": "^3.4.2",
+        "file-loader": "^6.0.0",
         "firebase": "^7.13.2",
         "html-loader": "^1.1.0",
         "html-webpack-plugin": "^4.2.0",
