Ignoring the Font Awesome Files

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
 node_modules/
 yarn.lock
+public/18df003f90a7f1313b98b23384ec4f1b.svg
+public/a940d584750708f5435ce2c523498ddb.woff
+public/9451d5fee89b51a20f8a44c56a4f6c1a.woff2
+public/7eefe04dc985dd4ad38bd7f4ec0c20a0.eot
+public/607a77859353c0cc1882b51e1e269d38.eot
+public/5818bbd07dfd7095920a592049f5d9bd.ttf
+public/3c45c98f6f6c1b009c082510d0255ef4.svg
+public/32267f3b4db33a7c85ee31d9b317c9e4.ttf
+public/31015e861aeb30ff8355fab3e876a6bd.woff2
