Ignoring FontAwesome Files

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ public/5818bbd07dfd7095920a592049f5d9bd.ttf
 public/3c45c98f6f6c1b009c082510d0255ef4.svg
 public/32267f3b4db33a7c85ee31d9b317c9e4.ttf
 public/31015e861aeb30ff8355fab3e876a6bd.woff2
+public/ee26f57bc9e3619b022b2c0ea0fc4660.woff
