--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "author": "JamesVanWaza <info@dosbranding.com>",
     "devDependencies": {
         "@babel/core": "^7.9.0",
-        "@babel/preset-env": "^7.9.0",
+        "@babel/preset-env": "^7.9.5",
         "@babel/preset-react": "^7.9.4",
         "@fortawesome/fontawesome-free": "^5.13.0",
         "algoliasearch": "^4.2.0",
@@ -42,5 +42,5 @@
     "peerDependencies": {
         "popper.js": "^1.16.1"
     },
-    "repository": "No Repo Yet"
+    "repository": "https://github.com/JamesVanWaza/webpack-docs-demo.git"
 }
