--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "webpack-docs-demo",
-    "version": "2.4.6",
+    "version": "2.4.7",
     "description": "Webpack Learning",
     "main": "index.html, main.js",
     "scripts": {
@@ -17,6 +17,7 @@
         "algoliasearch": "^4.3.0",
         "babel-loader": "^8.1.0",
         "css-loader": "^3.6.0",
+        "favicons-webpack-plugin": "^3.0.1",
         "file-loader": "^6.0.0",
         "html-loader": "^1.1.0",
         "html-webpack-plugin": "^4.3.0",
