--- a/package.json
+++ b/package.json
@@ -10,34 +10,34 @@
     "license": "MIT",
     "author": "JamesVanWaza <info@dosbranding.com>",
     "devDependencies": {
-        "@babel/core": "^7.10.4",
-        "@babel/preset-env": "^7.10.4",
-        "@babel/preset-react": "^7.10.4",
-        "@fortawesome/fontawesome-free": "^5.13.1",
-        "algoliasearch": "^4.3.0",
+        "@babel/core": "^7.12.3",
+        "@babel/preset-env": "^7.12.1",
+        "@babel/preset-react": "^7.12.1",
+        "@fortawesome/fontawesome-free": "^5.15.1",
+        "algoliasearch": "^4.5.1",
         "babel-loader": "^8.1.0",
         "css-loader": "^3.6.0",
         "favicons-webpack-plugin": "^3.0.1",
-        "file-loader": "^6.0.0",
-        "html-loader": "^1.1.0",
-        "html-webpack-plugin": "^4.3.0",
-        "instantsearch.css": "^7.4.2",
-        "instantsearch.js": "^4.7.0",
+        "file-loader": "^6.1.1",
+        "html-loader": "^1.3.2",
+        "html-webpack-plugin": "^4.5.0",
+        "instantsearch.css": "^7.4.5",
+        "instantsearch.js": "^4.8.3",
         "jquery": "^3.5.1",
         "node-sass": "^4.14.1",
-        "raw-loader": "^4.0.1",
-        "react-dom": "^16.13.1",
-        "sass-loader": "^9.0.2",
-        "style-loader": "^1.2.1",
+        "raw-loader": "^4.0.2",
+        "react-dom": "^16.14.0",
+        "sass-loader": "^9.0.3",
+        "style-loader": "^1.3.0",
         "uglifyjs-webpack-plugin": "^2.2.0",
-        "url-loader": "^4.1.0",
-        "webpack": "^4.43.0",
-        "webpack-cli": "^3.3.12",
-        "webpack-dev-server": "^3.11.0"
+        "url-loader": "^4.1.1"
     },
     "dependencies": {
-        "bootstrap": "^4.5.0",
-        "react": "^16.13.1"
+        "bootstrap": "^4.5.3",
+        "react": "^16.14.0",
+        "webpack": "^5.1.3",
+        "webpack-cli": "^4.0.0",
+        "webpack-dev-server": "^3.11.0"
     },
     "peerDependencies": {
         "popper.js": "^1.16.1"
