--- a/package.json
+++ b/package.json
@@ -1,46 +1,59 @@
 {
-    "name": "webpack-docs-demo",
-    "version": "2.4.7",
-    "description": "Webpack Learning",
-    "main": "index.html, main.js",
-    "scripts": {
-        "build": "webpack -w",
-        "start:dev": "webpack-dev-server"
-    },
-    "license": "MIT",
-    "author": "JamesVanWaza <info@dosbranding.com>",
-    "devDependencies": {
-        "@babel/core": "^7.12.3",
-        "@babel/preset-env": "^7.12.1",
-        "@babel/preset-react": "^7.12.1",
-        "@fortawesome/fontawesome-free": "^5.15.1",
-        "algoliasearch": "^4.5.1",
-        "babel-loader": "^8.1.0",
-        "css-loader": "^3.6.0",
-        "favicons-webpack-plugin": "^3.0.1",
-        "file-loader": "^6.1.1",
-        "html-loader": "^1.3.2",
-        "html-webpack-plugin": "^4.5.0",
-        "instantsearch.css": "^7.4.5",
-        "instantsearch.js": "^4.8.3",
-        "jquery": "^3.5.1",
-        "node-sass": "^4.14.1",
-        "raw-loader": "^4.0.2",
-        "react-dom": "^16.14.0",
-        "sass-loader": "^9.0.3",
-        "style-loader": "^1.3.0",
-        "uglifyjs-webpack-plugin": "^2.2.0",
-        "url-loader": "^4.1.1"
-    },
-    "dependencies": {
-        "bootstrap": "^4.5.3",
-        "react": "^16.14.0",
-        "webpack": "^5.1.3",
-        "webpack-cli": "^4.0.0",
-        "webpack-dev-server": "^3.11.0"
-    },
-    "peerDependencies": {
-        "popper.js": "^1.16.1"
-    },
-    "repository": "https://github.com/JamesVanWaza/webpack-docs-demo.git"
+  "name": "webpack-docs-demo",
+  "version": "2.4.9",
+  "description": "Webpack Learning",
+  "main": "index.html, main.js",
+  "scripts": {
+    "build": "webpack -w",
+    "start:dev": "webpack-dev-server"
+  },
+  "license": "MIT",
+  "author": "JamesVanWaza <info@dosbranding.com>",
+  "devDependencies": {
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-react": "^7.12.1",
+    "@fortawesome/fontawesome-free": "^5.15.1",
+    "algoliasearch": "^4.5.1",
+    "babel-loader": "^8.1.0",
+    "css-loader": "^3.6.0",
+    "favicons-webpack-plugin": "^3.0.1",
+    "file-loader": "^6.1.1",
+    "html-loader": "^1.3.2",
+    "html-webpack-plugin": "^4.5.0",
+    "instantsearch.css": "^7.4.5",
+    "instantsearch.js": "^4.8.3",
+    "jquery": "^3.5.1",
+    "node-sass": "^4.14.1",
+    "raw-loader": "^4.0.2",
+    "react-dom": "^16.14.0",
+    "sass-loader": "^9.0.3",
+    "style-loader": "^1.3.0",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "url-loader": "^4.1.1"
+  },
+  "dependencies": {
+    "bootstrap": "^4.5.3",
+    "react": "^16.14.0",
+    "webpack": "^5.1.3",
+    "webpack-cli": "^4.0.0",
+    "webpack-dev-server": "^3.11.0"
+  },
+  "peerDependencies": {
+    "popper.js": "^1.16.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/JamesVanWaza/webpack-docs-demo.git"
+  },
+  "bugs": {
+    "url": "https://github.com/JamesVanWaza/webpack-docs-demo/issues"
+  },
+  "homepage": "https://github.com/JamesVanWaza/webpack-docs-demo#readme",
+  "keywords": [
+    "Webpack",
+    "5",
+    "Tutorial",
+    "Demo"
+  ]
 }
