--- a/functions/package.json
+++ b/functions/package.json
@@ -1,25 +1,29 @@
 {
-  "name": "functions",
-  "description": "Cloud Functions for Firebase",
-  "scripts": {
-    "lint": "eslint .",
-    "serve": "firebase emulators:start --only functions",
-    "shell": "firebase functions:shell",
-    "start": "npm run shell",
-    "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log"
-  },
-  "engines": {
-    "node": "10"
-  },
-  "dependencies": {
-    "firebase-admin": "^8.10.0",
-    "firebase-functions": "^3.6.1"
-  },
-  "devDependencies": {
-    "eslint": "^5.12.0",
-    "eslint-plugin-promise": "^4.0.1",
-    "firebase-functions-test": "^0.2.0"
-  },
-  "private": true
+    "name": "webpack5-demo-functions",
+    "description": "Cloud Functions for Firebase",
+    "scripts": {
+        "lint": "eslint",
+        "serve": "firebase emulators:start --only functions",
+        "shell": "firebase functions:shell",
+        "start": "npm run shell",
+        "deploy": "firebase deploy --only functions",
+        "logs": "firebase functions:log"
+    },
+    "engines": {
+        "node": "10"
+    },
+    "dependencies": {
+        "firebase-admin": "^9.12.0",
+        "firebase-functions": "^3.15.7"
+    },
+    "devDependencies": {
+        "eslint": "^7.32.0",
+        "eslint-plugin-promise": "^5.1.0",
+        "firebase-functions-test": "^0.3.3"
+    },
+    "private": true,
+    "version": "1.0.1",
+    "main": "index.js",
+    "author": "JamesVanWaza <info@dosbranding.com>",
+    "license": "MIT"
 }
