--- a/package.json
+++ b/package.json
@@ -1,54 +1,54 @@
 {
-    "name": "webpack5-demo",
-    "version": "2.5.3",
-    "description": "Webpack Learning",
-    "main": "index.html, main.js",
-    "scripts": {
-        "build": "webpack -w",
-        "start": "webpack-dev-server"
-    },
-    "license": "MIT",
-    "author": "JamesVanWaza <info@dosbranding.com>",
-    "devDependencies": {
-        "@babel/core": "^7.15.8",
-        "@babel/preset-env": "^7.15.8",
-        "@babel/preset-react": "^7.14.5",
-        "@fortawesome/fontawesome-free": "^5.15.4",
-        "algoliasearch": "^4.10.5",
-        "babel-loader": "^8.2.2",
-        "css-loader": "^5.2.7",
-        "favicons-webpack-plugin": "^5.0.2",
-        "file-loader": "^6.2.0",
-        "html-loader": "^2.1.2",
-        "html-webpack-plugin": "^4.5.2",
-        "instantsearch.css": "^7.4.5",
-        "instantsearch.js": "^4.30.2",
-        "jquery": "^3.6.0",
-        "node-sass": "^6.0.1",
-        "raw-loader": "^4.0.2",
-        "sass-loader": "^10.2.0",
-        "style-loader": "^3.3.0",
-        "uglifyjs-webpack-plugin": "^2.2.0",
-        "url-loader": "^4.1.1"
-    },
-    "dependencies": {
-        "bootstrap": "^4.6.0",
-        "webpack": "^5.58.0",
-        "webpack-cli": "^4.9.0",
-        "webpack-dev-server": "^3.11.2"
-    },
-    "peerDependencies": {
-        "popper.js": "^1.16.1"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/JamesVanWaza/webpack5--demo.git"
-    },
-    "bugs": {
-        "url": "https://github.com/JamesVanWaza/webpack5-demo/issues"
-    },
-    "homepage": "https://github.com/JamesVanWaza/webpack5-demo#readme",
-    "keywords": [
-        "Webpack 5 Tutorial Demo"
-    ]
+  "name": "webpack5-demo",
+  "version": "2.5.4",
+  "description": "Webpack Learning",
+  "main": "index.html, main.js",
+  "scripts": {
+    "build": "webpack -w",
+    "start": "webpack-dev-server"
+  },
+  "license": "MIT",
+  "author": "JamesVanWaza <info@dosbranding.com>",
+  "devDependencies": {
+    "@babel/core": "^7.15.8",
+    "@babel/preset-env": "^7.15.8",
+    "@babel/preset-react": "^7.14.5",
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "algoliasearch": "^4.10.5",
+    "babel-loader": "^8.2.2",
+    "css-loader": "^6.3.0",
+    "favicons-webpack-plugin": "^5.0.2",
+    "file-loader": "^6.2.0",
+    "html-loader": "^2.1.2",
+    "html-webpack-plugin": "^5.3.2",
+    "instantsearch.css": "^7.4.5",
+    "instantsearch.js": "^4.30.2",
+    "jquery": "^3.6.0",
+    "node-sass": "^6.0.1",
+    "raw-loader": "^4.0.2",
+    "sass-loader": "^12.1.0",
+    "style-loader": "^3.3.0",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "url-loader": "^4.1.1",
+    "webpack-dev-server": "^4.3.1"
+  },
+  "dependencies": {
+    "bootstrap": "^5.1.2",
+    "webpack": "^5.58.0",
+    "webpack-cli": "^4.9.0"
+  },
+  "peerDependencies": {
+    "popper.js": "^1.16.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/JamesVanWaza/webpack5--demo.git"
+  },
+  "bugs": {
+    "url": "https://github.com/JamesVanWaza/webpack5-demo/issues"
+  },
+  "homepage": "https://github.com/JamesVanWaza/webpack5-demo#readme",
+  "keywords": [
+    "Webpack 5 Tutorial Demo"
+  ]
 }
