--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webpack5-demo",
-  "version": "2.5.4",
+  "version": "2.5.6",
   "description": "Webpack Learning",
   "main": "index.html, main.js",
   "scripts": {
@@ -10,35 +10,31 @@
   "license": "MIT",
   "author": "JamesVanWaza <info@dosbranding.com>",
   "devDependencies": {
-    "@babel/core": "^7.15.8",
-    "@babel/preset-env": "^7.15.8",
-    "@babel/preset-react": "^7.14.5",
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.0",
+    "@babel/preset-react": "^7.16.0",
     "@fortawesome/fontawesome-free": "^5.15.4",
-    "algoliasearch": "^4.10.5",
-    "babel-loader": "^8.2.2",
-    "css-loader": "^6.3.0",
+    "algoliasearch": "^4.11.0",
+    "babel-loader": "^8.2.3",
+    "css-loader": "^6.5.0",
     "favicons-webpack-plugin": "^5.0.2",
     "file-loader": "^6.2.0",
-    "html-loader": "^2.1.2",
-    "html-webpack-plugin": "^5.3.2",
+    "html-loader": "^3.0.0",
+    "html-webpack-plugin": "^5.5.0",
     "instantsearch.css": "^7.4.5",
-    "instantsearch.js": "^4.30.2",
+    "instantsearch.js": "^4.33.0",
     "jquery": "^3.6.0",
     "node-sass": "^6.0.1",
     "raw-loader": "^4.0.2",
-    "sass-loader": "^12.1.0",
-    "style-loader": "^3.3.0",
-    "uglifyjs-webpack-plugin": "^2.2.0",
+    "sass-loader": "^12.3.0",
+    "style-loader": "^3.3.1",
+    "terser-webpack-plugin": "^5.2.4",
     "url-loader": "^4.1.1",
-    "webpack-dev-server": "^4.3.1"
+    "webpack-dev-server": "^4.4.0"
   },
   "dependencies": {
-    "bootstrap": "^5.1.2",
-    "webpack": "^5.58.0",
-    "webpack-cli": "^4.9.0"
-  },
-  "peerDependencies": {
-    "popper.js": "^1.16.1"
+    "webpack": "^5.61.0",
+    "webpack-cli": "^4.9.1"
   },
   "repository": {
     "type": "git",
