--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "webpack5-demo",
-    "version": "1.0.4",
-    "description": "",
+    "version": "1.0.5",
+    "description": "Setting up Webpack 5",
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
@@ -13,7 +13,7 @@
         "url": "git+https://github.com/JamesVanWaza/webpack5-demo.git"
     },
     "keywords": [],
-    "author": "",
+    "author": "JamesVanWaza <info@dosbranding.com>",
     "license": "MIT",
     "bugs": {
         "url": "https://github.com/JamesVanWaza/webpack5-demo/issues"
@@ -22,24 +22,24 @@
     "devDependencies": {
         "css-loader": "^6.5.1",
         "file-loader": "^6.2.0",
-        "html-loader": "^3.0.1",
+        "html-loader": "^3.1.0",
         "html-webpack-plugin": "^5.5.0",
         "node-sass": "^7.0.1",
         "postcss": "^8.4.5",
         "postcss-loader": "^6.2.1",
-        "postcss-preset-env": "^7.2.0",
+        "postcss-preset-env": "^7.2.3",
         "raw-loader": "^4.0.2",
         "sass-loader": "^12.4.0",
         "style-loader": "^3.3.1",
-        "tailwindcss": "^3.0.11",
+        "tailwindcss": "^3.0.15",
         "url-loader": "^4.1.1",
-        "webpack": "^5.65.0",
+        "webpack": "^5.67.0",
         "webpack-cli": "^4.9.1",
-        "webpack-dev-server": "^4.7.2"
+        "webpack-dev-server": "^4.7.3"
     },
     "dependencies": {
-        "@babel/core": "^7.16.7",
-        "@babel/preset-env": "^7.16.7",
+        "@babel/core": "^7.16.12",
+        "@babel/preset-env": "^7.16.11",
         "babel-loader": "^8.2.3"
     }
 }
