--- a/firebase.json
+++ b/firebase.json
@@ -1,49 +1,50 @@
 {
-  "firestore": {
-    "rules": "firestore.rules",
-    "indexes": "firestore.indexes.json"
-  },
-  "functions": {
-    "predeploy": [
-      "npm --prefix \"$RESOURCE_DIR\" run lint"
-    ],
-    "source": "functions"
-  },
-  "hosting": {
-    "public": "public",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ]
-  },
-  "storage": {
-    "rules": "storage.rules"
-  },
-  "emulators": {
-    "functions": {
-      "port": 1007
-    },
     "firestore": {
-      "port": 2007
+        "rules": "firestore.rules",
+        "indexes": "firestore.indexes.json"
+    },
+    "functions": {
+        "predeploy": [
+            "npm --prefix \"$RESOURCE_DIR\" run lint"
+        ],
+        "source": "functions"
     },
     "hosting": {
-      "port": 3007
-    },
-    "pubsub": {
-      "port": 4007
-    },
-    "ui": {
-      "enabled": true
-    },
-    "auth": {
-      "port": 9099
+        "target": "webpack-5-demo",
+        "public": "public",
+        "ignore": [
+            "firebase.json",
+            "**/.*",
+            "**/node_modules/**"
+        ]
     },
     "storage": {
-      "port": 9199
+        "rules": "storage.rules"
+    },
+    "emulators": {
+        "functions": {
+            "port": 1007
+        },
+        "firestore": {
+            "port": 2007
+        },
+        "hosting": {
+            "port": 3007
+        },
+        "pubsub": {
+            "port": 4007
+        },
+        "ui": {
+            "enabled": true
+        },
+        "auth": {
+            "port": 9099
+        },
+        "storage": {
+            "port": 9199
+        }
+    },
+    "remoteconfig": {
+        "template": "remoteconfig.template.json"
     }
-  },
-  "remoteconfig": {
-    "template": "remoteconfig.template.json"
-  }
 }
