--- a/.firebaserc
+++ b/.firebaserc
@@ -1,14 +1,14 @@
 {
-    "projects": {
-        "default": "startbootstrap-dostesting"
-    },
-    "targets": {
-        "startbootstrap-dostesting": {
-            "hosting": {
-                "webpack-5-demo": [
-                    "webpack5-demo"
-                ]
-            }
-        }
+  "projects": {
+    "default": "startbootstrap-dostesting"
+  },
+  "targets": {
+    "startbootstrap-dostesting": {
+      "hosting": {
+        "webpack5-site": [
+          "webpack-5-demo"
+        ]
+      }
     }
+  }
 }
