--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "dependencies": {
         "@babel/core": "^7.17.2",
         "@babel/preset-env": "^7.16.11",
-        "babel-loader": "^8.2.3"
+        "babel-loader": "^8.2.3",
+        "@fortawesome/fontawesome-free": "^6.0.0"
     }
 }
