--- a/firebase.json
+++ b/firebase.json
@@ -3,14 +3,21 @@
         "rules": "firestore.rules",
         "indexes": "firestore.indexes.json"
     },
-    "functions": {
+    "functions": [{
         "predeploy": [
             "npm --prefix \"$RESOURCE_DIR\" run lint"
         ],
-        "source": "functions"
-    },
+        "source": "functions",
+        "codebase": "default",
+        "ignore": [
+            "node_modules",
+            ".git",
+            "firebase-debug.log",
+            "firebase-debug.*.log"
+        ]
+    }],
     "hosting": {
-        "target": "webpack5demo",
+        "target": "webpack",
         "public": "public",
         "ignore": [
             "firebase.json",
@@ -42,9 +49,8 @@
         },
         "storage": {
             "port": 9199
-        }
+        },
+        "singleProjectMode": true
     },
-    "remoteconfig": {
-        "template": "remoteconfig.template.json"
-    }
+    "remoteconfig": {}
 }
