--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "webpack5-demo",
-    "version": "1.0.8",
+    "version": "1.0.9",
     "description": "Setting up Webpack 5",
     "main": "index.js",
     "scripts": {
@@ -39,6 +39,7 @@
     "dependencies": {
         "@babel/core": "^7.20.12",
         "@babel/preset-env": "^7.20.2",
-        "babel-loader": "^9.1.2"
+        "babel-loader": "^9.1.2",
+        "@fortawesome/fontawesome-free": "^6.2.1"
     }
 }
