--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
     "name": "webpack5-demo",
-    "version": "1.1.1",
+    "version": "1.1.3",
     "description": "Setting up Webpack 5",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "build": "webpack --watch",
-        "start": "webpack serve --open"
+        "build": "webpack -w",
+        "start": "webpack serve"
     },
     "repository": {
         "type": "git",
@@ -21,17 +20,15 @@
     "homepage": "https://github.com/JamesVanWaza/webpack5-demo#readme",
     "devDependencies": {
         "css-loader": "^6.7.3",
-        "file-loader": "^6.2.0",
         "html-loader": "^4.2.0",
+        "favicons-webpack-plugin": "6.0.0",
         "html-webpack-plugin": "^5.5.1",
         "node-sass": "^8.0.0",
         "postcss": "^8.4.23",
         "postcss-loader": "^7.2.4",
         "postcss-preset-env": "^8.1.0",
-        "raw-loader": "^4.0.2",
         "sass-loader": "^13.2.2",
         "style-loader": "^3.3.2",
-        "url-loader": "^4.1.1",
         "webpack": "^5.80.0",
         "webpack-cli": "^5.0.2",
         "webpack-dev-server": "^4.13.3"
