--- a/package.json
+++ b/package.json
@@ -1,11 +1,30 @@
 {
     "name": "webpack5-demo",
-    "version": "1.1.7",
+    "version": "1.1.8",
     "description": "Setting up Webpack 5",
     "main": "index.js",
     "scripts": {
         "build": "webpack -w",
         "start": "webpack serve"
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.4.2",
+        "firebase": "10.1.0"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.22.10",
+        "@babel/preset-env": "^7.22.10",
+        "babel-loader": "^9.1.2",
+        "css-loader": "^6.8.1",
+        "html-loader": "^4.2.0",
+        "favicons-webpack-plugin": "6.0.0",
+        "html-webpack-plugin": "^5.5.3",
+        "node-sass": "^9.0.0",
+        "sass-loader": "^13.3.2",
+        "style-loader": "^3.3.3",
+        "webpack": "^5.88.2",
+        "webpack-cli": "^5.1.4",
+        "webpack-dev-server": "^4.15.1"
     },
     "repository": {
         "type": "git",
@@ -17,26 +36,5 @@
     "bugs": {
         "url": "https://github.com/JamesVanWaza/webpack5-demo/issues"
     },
-    "homepage": "https://github.com/JamesVanWaza/webpack5-demo#readme",
-    "devDependencies": {
-        "css-loader": "^6.8.1",
-        "html-loader": "^4.2.0",
-        "favicons-webpack-plugin": "6.0.0",
-        "html-webpack-plugin": "^5.5.3",
-        "node-sass": "^9.0.0",
-        "postcss": "^8.4.27",
-        "postcss-loader": "^7.3.3",
-        "postcss-preset-env": "^9.1.1",
-        "sass-loader": "^13.3.2",
-        "style-loader": "^3.3.3",
-        "webpack": "^5.88.2",
-        "webpack-cli": "^5.1.4",
-        "webpack-dev-server": "^4.15.1"
-    },
-    "dependencies": {
-        "@babel/core": "^7.22.10",
-        "@babel/preset-env": "^7.22.10",
-        "babel-loader": "^9.1.2",
-        "@fortawesome/fontawesome-free": "^6.4.2"
-    }
+    "homepage": "https://github.com/JamesVanWaza/webpack5-demo#readme"
 }
