--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "webpack5-demo",
-    "version": "1.1.9",
+    "version": "1.2.0",
     "description": "Setting up Webpack 5",
     "main": "index.js",
     "scripts": {
@@ -9,17 +9,17 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.4.2",
-        "firebase": "10.3.1"
+        "firebase": "10.4.0"
     },
     "devDependencies": {
-        "@babel/core": "^7.22.17",
-        "@babel/preset-env": "^7.22.15",
+        "@babel/core": "^7.23.0",
+        "@babel/preset-env": "^7.22.20",
         "babel-loader": "^9.1.2",
         "css-loader": "^6.8.1",
         "html-loader": "^4.2.0",
         "favicons-webpack-plugin": "6.0.1",
         "html-webpack-plugin": "^5.5.3",
-        "node-sass": "^9.0.0",
+        "sass": "^1.68.0",
         "sass-loader": "^13.3.2",
         "style-loader": "^3.3.3",
         "webpack": "^5.88.2",
